--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/modal": "^2.1.2",
+    "@chakra-ui/react": "^2.2.4",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
