--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@chakra-ui/modal": "^2.1.2",
-    "@chakra-ui/react": "^2.2.4",
+    "@chakra-ui/react": "^2.2.6",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
+    "framer-motion": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
